@@ -14,6 +14,7 @@
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/drawable/imagebutton_focus_selected.xml" value="0.33697916666666666" />
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/drawable/imagebutton_selected.xml" value="0.33697916666666666" />
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/layout/audio_override.xml" value="0.2765625" />
+        <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/layout/dialog_subgame_options.xml" value="0.3307291666666667" />
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/layout/left_slide_panel.xml" value="0.3234375" />
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/layout/list_item_subgame.xml" value="0.1524822695035461" />
         <entry key="..\:/ANDROID/AndroidStudioProjects/Raze_Touch/AndroidCore_OpenTouch/androidcore/src/main/res/layout/view_resolution_select.xml" value="0.33177083333333335" />
