@@ -9,8 +9,8 @@ android {
         applicationId "com.opentouchgaming.razetouch"
         minSdkVersion 21
         targetSdkVersion 27 // WARNING upping this will break HTTP access needed for version checking
-        versionCode 12
-        versionName "2.0 - BETA 4"
+        versionCode 13
+        versionName "2.0 - BETA 5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
